--- a/carta/index.html
+++ b/carta/index.html
@@ -44,7 +44,7 @@
           </div>
             <div class="wishes">
             <p>De Brainy ;).</p>
-            <p>Happy Birthday SORAYA ,feliz cumpleaños espero que lo pases increible en tu dia, Que este día esté lleno de risas, amor y momentos inolvidables. Eres una persona increíble y mereces todo lo bueno que la vida tiene para ofrecer. Sigue brillando con esa luz especial que te caracteriza TQ!🎂.</p>
+            <p>Happy Birthday SORAYA ,feliz cumpleaños espero que lo pases increible en tu dia, Que este día esté lleno de risas, amor y momentos inolvidables. Eres una persona increíble y mereces todo lo bueno que la vida tiene para ofrecer. Sigue brillando con esa luz especial que te caracteriza TQM !🎂.</p>
             <p class="sara">8 JULIO 25</p>
             </div>
           </div>
