--- a/carta/index.html
+++ b/carta/index.html
@@ -43,7 +43,7 @@
           <h3 class="toyou">SORAYA!</h3>  
           </div>
             <div class="wishes">
-            <p>De Brainy ;).</p>
+            <p>De Brailin ;).</p>
             <p>Happy Birthday SORAYA ,feliz cumpleaños espero que lo pases increible en tu dia, Que este día esté lleno de risas, amor y momentos inolvidables. Eres una persona increíble y mereces todo lo bueno que la vida tiene para ofrecer. Sigue brillando con esa luz especial que te caracteriza TQM !🎂.</p>
             <p class="sara">8 JULIO 25</p>
             </div>
